# BatchGPT

./: BatchGPT.drawio  README.md  pyproject.toml  requirements.txt
example/: example01.py
src/BatchGPT/: Cleaner.py  Prompt.py  sentimentss.csv
src/BatchGPT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
